# Project-PrasWord

./: Makefile  README.md  install.sh  pyproject.toml  run.bat  run.py  run.sh  setup.py
prasword/: main.py
prasword/core/: document.py  document_manager.py
prasword/features/academic/: bibtex_manager.py  citation_engine.py  cross_reference.py
prasword/features/datascience/: code_highlighter.py  csv_table.py  jupyter_cell.py  math_renderer.py
prasword/features/filemanagement/: file_io.py
prasword/features/formatting/: formatting_engine.py
prasword/features/layout/: header_footer.py  page_layout.py  page_numbering.py  toc_generator.py
prasword/features/metrics/: metrics_engine.py
prasword/gui/: editor_widget.py  main_window.py
prasword/gui/dialogs/: citation_dialog.py  find_replace_dialog.py  git_dialog.py  insert_table_dialog.py  math_dialog.py  preferences_dialog.py
prasword/gui/panels/: sidebar_panel.py
prasword/gui/widgets/: distraction_free_overlay.py  formatting_toolbar.py  status_bar_widget.py  word_count_widget.py
prasword/utils/: config.py  logger.py  theme_manager.py
tests/: conftest.py  test_academic.py  test_datascience.py  test_document.py  test_fileio.py  test_formatting.py  test_integration.py  test_layout.py  test_metrics.py
